// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Badge FurtherUsage renders 1`] = `
<Fragment>
  <h2
    id="further-usage"
  >
    Further usage
  </h2>
  <p>
    Badges inherit the size of the immediate parent element.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <h1>
      Badge 
      <span
        className="badge badge-blue"
      >
        blue
      </span>
    </h1>
    <h2>
      Badge 
      <span
        className="badge badge-blue"
      >
        blue
      </span>
    </h2>
    <h3>
      Badge 
      <span
        className="badge badge-blue"
      >
        blue
      </span>
    </h3>
    <h4>
      Badge 
      <span
        className="badge badge-blue"
      >
        blue
      </span>
    </h4>
    <h5>
      Badge 
      <span
        className="badge badge-blue"
      >
        blue
      </span>
    </h5>
    <h6>
      Badge 
      <span
        className="badge badge-blue"
      >
        blue
      </span>
    </h6>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Badge Overview renders 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    Use class 
    <Property
      value=".badge"
    />
     along with 
    <Property
      value=".badge-{color}"
    />
     to display the badge of your choosing.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <p>
      Badge 
      <span
        className="badge badge-default"
      >
        default
      </span>
    </p>
    <p>
      Badge 
      <span
        className="badge badge-yellow"
      >
        brand
      </span>
    </p>
    <p>
      Badge 
      <span
        className="badge badge-blue"
      >
        blue
      </span>
    </p>
    <p>
      Badge 
      <span
        className="badge badge-red"
      >
        red
      </span>
    </p>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Badge renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Badges are small rectangular boxes which can convey a message and or state with their text and color.
  </p>
  <Overview />
  <FurtherUsage />
</DocContainer>
`;
